<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/register" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/last_names"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLastNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email_label"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="email@gmail.com"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/password_label"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#F25C05"
        android:fontFamily="@font/poppins"
        android:text="@string/register_btn"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/register_question"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:text="@string/register_log_in_message"
            android:textAlignment="textStart"
            android:textColor="@color/naranja"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>