<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgstart"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/start_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/start_description"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnGoLogin"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/poppins"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="StartLogin"
        android:text="@string/login_btn"
        android:textColor="#000000"
        android:textSize="15sp"
        app:cornerRadius="12dp" />

    <Button
        android:id="@+id/btnGoRegister"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/amarillito"
        android:fontFamily="@font/poppins"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="StartRegister"
        android:text="@string/start_go_to_register"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:cornerRadius="12dp" />



</LinearLayout>