<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CreatePartyFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/create_party_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:src="@drawable/joinparty" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_party_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_party_name_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPartyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/create_party_name_input_hint"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreateParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_party_btn_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp" />

</LinearLayout>