<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoToPartyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:src="@drawable/partyalreadyexists" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/go_to_party_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/go_to_party_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnGoToParty"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/go_to_party_btn_text"
            android:textColor="@color/white"
            app:icon="@drawable/right"
            app:iconTint="@color/white" />

    </LinearLayout>



</LinearLayout>