<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emptyPartyLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".EmptyPartyFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/emptyPartyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/empty_party_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:src="@drawable/emptyparty" />

        <Button
            android:id="@+id/btnEmptyPartyCreateParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/go_to_create_party_btn_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            tools:text="@string/go_to_create_party_btn_text" />

        <Button
            android:id="@+id/btnEmptyPartyJoinParty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarillito"
            android:fontFamily="@font/poppins"
            android:text="@string/empty_party_join_party_btn_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            tools:text="@string/empty_party_join_party_btn_text" />
    </LinearLayout>


</LinearLayout>