<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".PartyDetailFragment">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnDetailBack"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="12dp"
                app:icon="@drawable/deshacer"
                app:iconTint="@color/white" />


            <Button
                android:id="@+id/btnRefresh"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/amarillito"
                app:cornerRadius="12dp"
                app:icon="@drawable/gira_a_la_derecha"
                app:iconTint="@color/white" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/tracker" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Pupas Tracker"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnNombreDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:fontFamily="@font/poppins"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="Antonio Esquivel"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/participant_details_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <TableLayout
            android:id="@+id/tblDetailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/amarillito"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/participant_details_pupusa_type"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/participant_details_amount"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Editar"
                    android:textColor="@color/amarillito" />


            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

        </TableLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddPupusas"
            style="?attr/floatingActionButtonSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:src="@drawable/plus_pequeno"
            android:visibility="visible"
            app:backgroundTint="@color/amarillito"
            app:elevation="6dp"
            app:tint="@color/white" />

        <!-- Opcion 2: Boton normalito -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/amarillito"
                android:backgroundTint="@color/amarillito"
                android:fontFamily="@font/poppins"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/participant_details_drink"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPrecioBebida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="$">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDrinkPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:inputType="number|numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnAddBebidas"
                        style="?attr/materialIconButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="Editar Pupusas"
                        android:textAlignment="center"
                        app:icon="@drawable/disco"
                        app:iconTint="@color/naranja" />

                    <Button
                        android:id="@+id/btnDeleteBebidas"
                        style="?attr/materialIconButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="Editar Pupusas"
                        android:textAlignment="center"
                        app:icon="@drawable/basura"
                        app:iconTint="#AD0000" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>